--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     // Enable per-language
     "[rust]": {
         "editor.formatOnSave": true,
-    }
+    },
+    "rust-analyzer.checkOnSave.command": "clippy"
 }
