Add styled frontend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     "[rust]": {
         "editor.formatOnSave": true,
     },
+    "[scss]": {
+        "editor.formatOnSave": true,
+    },
     "rust-analyzer.checkOnSave.command": "clippy"
 }
