--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,6 @@
     "[scss]": {
         "editor.formatOnSave": true,
     },
-    "rust-analyzer.check.command": "check",
+    "rust-analyzer.check.command": "clippy",
     "rust-analyzer.rustfmt.extraArgs": ["+nightly"]
 }
