Add cli and example files

--- a/gpt-common/Cargo.toml
+++ b/gpt-common/Cargo.toml
@@ -12,6 +12,7 @@ petgraph = "0.6.2"
 urlencoding = "2.1.2"
 log = "0.4.6"
 itertools = { version = "0.10.5", features = ["use_std"] }
+serde = { version = "1.0.160", features = ["derive"] }
 
 [dev-dependencies]
 rstest = "0.17.0"
